# tiny_nn_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  project_proposal.md  project_proposal_template.md
include/tinyinfer/: graph.h  mnist_loader.h  profiler.h  tinyinfer.h
model_weights/: mnist_fc.onnx
scratch/: CMakeLists.txt  model_onnx_playground.cpp  print_onnx.cpp
src/: main.cpp
src/data/: CMakeLists.txt  dataset_helpers.h  mnist_loader.cpp  mnist_loader.h
src/data/tests/: CMakeLists.txt  test_data.cpp
src/eval/: CMakeLists.txt  evaluator.cpp  evaluator.h
src/eval/tests/: CMakeLists.txt  test_eval.cpp
src/graph/: CMakeLists.txt  graph.h
src/graph/tests/: CMakeLists.txt  test_graph.cpp
src/model/: CMakeLists.txt  model.cpp  model.h  onnx_parser.cpp  onnx_parser.h
src/model/tests/: CMakeLists.txt  test_linear.onnx  test_model.cpp
src/ops/: CMakeLists.txt  flatten_op.cpp  gemm_op.cpp  op_registry.cpp  op_registry.h  relu_op.cpp  softmax_op.cpp
src/ops/tests/: CMakeLists.txt  test_ops.cpp
src/runtime/: CMakeLists.txt  executor.cpp  executor.h  profiler.cpp
src/runtime/tests/: CMakeLists.txt  test_runtime.cpp
src/tensor/: CMakeLists.txt  tensor.cpp  tensor.cu  tensor.h  tensor_functions.h
src/tensor/tests/: CMakeLists.txt  test_tensor.cpp
tools/: generate_mnist_onnx.py  generate_test_linear_onnx.py  pyproject.toml
