[tool.poetry]
name = "tiny-nn-engine-tools"
version = "0.1.0"
description = "Tools for generating ONNX models for TinyNNEngine"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
torchvision = "*"
onnx = "*"
click = "*"

[tool.poetry.scripts]
generate-onnx = "generate_mnist_onnx:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
