[tool.poetry]
name = "tiny-nn-engine-tools"
version = "0.1.0"
description = "Tools for generating ONNX models for TinyNNEngine"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0,<3.0"
torchvision = ">=0.15,<1.0"
onnx = ">=1.14,<2.0"
click = ">=8.0,<9.0"
onnx2torch = "^1.5.15"

[tool.poetry.scripts]
generate-onnx = "generate_mnist_onnx:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
